48

* New activity icon, Fix for #2829 (erikos)

47

* redesign when members leave and rejoin, added timestamp to be 
able to bring the links in the right order, you can not add alink 
twice unless you deleted it already, links are added to the tray 
on the right side (erikos)

46
* fix for gray page when resuming from journal (erikos)
* #2327 Unescape the URI to display it in the address bar (marco)
* fixed memory consuption when creating shared links 
  by calling the garbage collector (erikos)

45

* use json for storing the history and the shared
  link information to the journal (erikos)
* use sugar tray which enables scrolling for the links (erikos)
* only try to connect to presence service when offline (erikos)

44

* new design for shared links (erikos)
* start the activity with in the browser tab open when in joined 
   a shared session or a handle.uri is given (erikos)

43

* fix for Palette.TOP (erikos)

42

* Added the possibility to hide and show the linktray. currently you can toggle this with ctrl+s(erikos)
* Port to new tubes API. (cassidy)
* Use sugar's tubeconn.py. (cassidy)

41

* Code cleanup. (simon)

40

* #2304 This adds the sharing facilities to the web-activity. 

You share the currently loaded page by hitting the star button in the browser toolbbar when you are in the shared mode of the activity. The link will come up as a thumbnail in the toolbar at the bottom of the page. The information about the link: url, title, thumbnail, creator gets then transmitted to all the other members. They can then decide whether to show the link in their browser or not. Everyone can add a link but you can only delete a link in your local linkbar which prevents someone from erasing all your links. (erikos)

* #2577: Add german translation. (fab)
* #2596: Add french translation. (Samuel Bizien)

38

* #2763: Save downloads to flash, not to /tmp. (tomeu)

37

* Add greek translation. (simosx)

36
