@@ -1,3 +1,5 @@
+* #2555: Report download progress to the Journal via the DataStore. (tomeu)
+
 48
 
 * New activity icon, Fix for #2829 (erikos)
